# mIcal_mc

./: CMakeLists.txt  README.md  batch_create_mac  batch_surya_job.jdl  detector_config.cfg  env.sh  geo_mical_world.gdml  mICAL.cc  run.mac  surya_jobwrapper.sh  vis.mac
include/: HitPos.h  HitPosdict.h  Hits.h  Hitsdict.h  InoCluster.h  InoFittedTrack.h  InoHit.h  InoMuRange.h  InoShowerCand.h  InoStrip.h  InoTrack.h  InoTrackCand.h  InoTrackFinder.h  InoTrackFitAlg.h  InoTrackSegment.h  InoVertex.h  MultiSimAnalysis.hh  SwimParticle.h  SwimSwimmer.h  micalAbsorberParameterisation.hh  micalActiveParameterisation.hh  micalCal0Hit.hh  micalCal0SD.hh  micalCal0SDMessenger.hh  micalDetectorConstruction.hh  micalDetectorParameterDef.hh  micalElectroMagneticField.hh  micalEventAction.hh  micalEventActionMessenger.hh  micalFieldPropagator.hh  micalParameterMessenger.hh  micalPhysicsList.hh  micalPrimaryGeneratorAction.hh  micalPrimaryGeneratorMessenger.hh  micalRunAction.hh  micalRunActionMessenger.hh  micalSteppingAction.hh  micalSteppingVerbose.hh  micalutils.hh  vect_manager.h
input_files/: README.md  plotFluxThetaPhi.C
src/: HitPos.cc  HitPosdict.cc  Hits.cc  Hitsdict.cc  InoCluster.cc  InoFittedTrack.cc  InoHit.cc  InoMuRange.cc  InoShowerCand.cc  InoStrip.cc  InoTrack.cc  InoTrackCand.cc  InoTrackFinder.cc  InoTrackFitAlg.cc  InoTrackSegment.cc  InoVertex.cc  MultiSimAnalysis.cc  SwimParticle.cc  SwimSwimmer.cc  micalAbsorberParameterisation.cc  micalActiveParameterisation.cc  micalCal0Hit.cc  micalCal0SD.cc  micalCal0SDMessenger.cc  micalDetectorConstruction.cc  micalDetectorParameterDef.cc  micalElectroMagneticField.cc  micalEventAction.cc  micalEventActionMessenger.cc  micalFieldPropagator.cc  micalParameterMessenger.cc  micalPhysicsList.cc  micalPrimaryGeneratorAction.cc  micalPrimaryGeneratorMessenger.cc  micalRunAction.cc  micalRunActionMessenger.cc  micalSteppingAction.cc  micalSteppingVerbose.cc  micalutils.cc  vect_manager.cc
